REGRESSION (r275756): Accelerated animations freeze when invalidating layout with shadow dom https://bugs.webkit.org/show_bug.cgi?id=228954 <rdar://problem/81750217>

Reviewed by Ryosuke Niwa.

Source/WebCore:

Test: animations/shadow-host-child-change.html

Tearing down the host renderer after slot assignments change cancels animations on it.

* dom/SlotAssignment.cpp:
(WebCore::SlotAssignment::didChangeSlot):
* rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::tearDownRenderersAfterSlotChange):

Add a version that keeps the animations going on the teardown root.

(WebCore::RenderTreeUpdater::tearDownRenderers):
* rendering/updating/RenderTreeUpdater.h:

LayoutTests:

Original test by Liam DeBeasi

* animations/shadow-host-child-change-expected.html: Added.
* animations/shadow-host-child-change.html: Added.


Canonical link: https://commits.webkit.org/240582@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281128 268f45cc-cd09-0410-ab3c-d52691b4dbfc